@@ -1,3 +1,8 @@
+2003-03-08  Andrew Cagney  <cagney@redhat.com>
+
+	* tui-out.c: Update copyright.
+	(tui_out_data): Define typedef.  Use instead of ui_out_data.
+
 2003-02-14  Andrew Cagney  <ac131313@redhat.com>
 
 	* tui.c (tui_enable, tui_disable): Don't modify tui_version.
